--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bunyan": "^1.8.1",
     "eslint": "1.10.1",
     "node-uuid": "^1.4.7",
-    "opentracing": "^0.10.6"
+    "opentracing": "^0.10.6",
+    "restify": "^4.1.1",
+    "restify-clients": "git+https://github.com/joshwilsdon/restify-clients.git#master"
   },
   "license": "MPL-2.0"
 }
