update to opentracing-javascript 0.12.1
See upstream changelog for full detains.  Highlights that caused churn:
 * Must go through `globalTracer()` to get the singleton.
 * I am unclear on how `childOf` was being handled before, but it
   needs to be explicit now.
 * The setting of operation name is also explicit.

NOTE: There is a more recent tag on github, but 0.12.1 is the most
recent on npm.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bunyan": "^1.8.1",
     "eslint": "1.10.1",
     "node-uuid": "^1.4.7",
-    "opentracing": "^0.10.6",
+    "opentracing": "0.12.1",
     "restify": "^4.1.1",
     "restify-clients": "git+https://github.com/joshwilsdon/restify-clients.git#upstream"
   },
