--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "dependencies": {
     "assert-plus": "^1.0.0",
     "bunyan": "^1.8.1",
+    "continuation-local-storage": "3.2.0",
     "eslint": "1.10.1",
     "node-uuid": "^1.4.7",
     "opentracing": "0.12.1",
     "restify": "^4.1.1",
-    "restify-clients": "git+https://github.com/joshwilsdon/restify-clients.git#upstream"
+    "restify-clients": "git+https://github.com/joshwilsdon/restify-clients.git#cls"
   },
   "license": "MPL-2.0"
 }
