--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node-uuid": "^1.4.7",
     "opentracing": "0.12.1",
     "restify": "^4.1.1",
-    "restify-clients": "git+https://github.com/joshwilsdon/restify-clients.git#cls"
+    "restify-clients": "git+https://github.com/joshwilsdon/restify-clients.git#rfd-35-cls"
   },
   "license": "MPL-2.0"
 }
