--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "bunyan": "^1.8.1",
     "cls-hooked": "git+https://github.com/joshwilsdon/cls-hooked.git#master",
     "node-uuid": "^1.4.7",
-    "opentracing": "0.12.1",
-    "restify": "^4.1.1",
-    "restify-clients": "git+https://github.com/joshwilsdon/restify-clients.git#rfd-35-cls"
+    "opentracing": "0.12.1"
   },
   "devDependencies": {
     "eslint": "1.10.1"
