--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "assert-plus": "^1.0.0",
     "bunyan": "^1.8.1",
     "cls-hooked": "git+https://github.com/joshwilsdon/cls-hooked.git#master",
+    "dtrace-provider": "0.8.0",
     "node-uuid": "^1.4.7",
     "opentracing": "0.12.1"
   },
